Network Error Logging: Check for and fix AppRequestContext isolation.

Apps should be able to use NEL, but they shouldn't share state with the
main request context.

Bug: 803604
Change-Id: I6533ce46e21c2b47e888524aeeeb293367919ab3
Reviewed-on: https://chromium-review.googlesource.com/875050
Commit-Queue: Julia Tuttle <juliatuttle@chromium.org>
Reviewed-by: Matt Menke <mmenke@chromium.org>
Cr-Commit-Position: refs/heads/master@{#530668}