chrome/browser/profiles/off_the_record_profile_io_data.cc
@@ -1,4 +1,3 @@
-
 // Copyright (c) 2012 The Chromium Authors. All rights reserved.
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
@@ -34,6 +33,7 @@
 #include "net/http/http_cache.h"
 #include "net/http/http_network_session.h"
 #include "net/http/http_server_properties_impl.h"
+#include "net/network_error_logging/network_error_logging_service.h"
 #include "net/reporting/reporting_policy.h"
 #include "net/reporting/reporting_service.h"
 #include "net/ssl/channel_id_service.h"
@@ -284,7 +284,12 @@ net::URLRequestContext* OffTheRecordProfileIOData::InitializeAppRequestContext(
     context->SetReportingService(net::ReportingService::Create(
         context->reporting_service()->GetPolicy(), context));
   }
-  // TODO(juliatuttle): Should also isolate NetworkErrorLoggingDelegate.
+  if (context->network_error_logging_delegate()) {
+    context->SetNetworkErrorLoggingDelegate(
+        net::NetworkErrorLoggingService::Create());
+    context->network_error_logging_delegate()->SetReportingService(
+        context->reporting_service());
+  }
   return context;
 }
 
